--- a/src/App.css
+++ b/src/App.css
@@ -85,3 +85,19 @@
 .x.axis path {
     display: none;
 }
+
+/*
+    Tooltip styling
+ */
+div.tooltip {
+    position: absolute;
+    text-align: center;
+    width: 80px;
+    height: 28px;
+    padding: 2px;
+    font: 12px sans-serif;
+    background: lightsteelblue;
+    border: 0px;
+    border-radius: 8px;
+    pointer-events: none;
+}
